@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libolecf],
- [20150630],
+ [20150822],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -238,7 +238,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libolecf/libolecf.rc])
-AC_CONFIG_FILES([pyolecf/setup.py])
 AC_CONFIG_FILES([libolecf.pc])
 AC_CONFIG_FILES([libolecf.spec])
 dnl Have configure write its configuration
