@@ -61,14 +61,9 @@ pyolecf_la_LDFLAGS  = -module -avoid-version $(PYTHON_LDFLAGS)
 
 endif
 
-EXTRA_DIST = \
-	setup.py \
-	setup.py.in
-
 MAINTAINERCLEANFILES = \
 	Makefile.in
 
 distclean: clean
-	/bin/rm -f setup.py
 	/bin/rm -f Makefile
 
