@@ -86,6 +86,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20150822
+* worked on setup.py
+
 20150630
 * changed version
 
